# DolHook

./: CMakeLists.txt  Dockerfile  Makefile  README.md
runtime/: lind.ld
runtime/include/: dolhook.h
runtime/src/: dolhook.c  entry.S  pattern.c  vi_banner.c
tests/: test_dol_parser.cpp
tools/: env.s
tools/patchiso/: dol.cpp  dol.h  gcm.cpp  gcm.h  main.cpp
